@@ -25,6 +25,10 @@ faim_export struct aim_conn_t *aim_chat_getconn(struct aim_session_t *sess, char
   for (cur = sess->connlist; cur; cur = cur->next) {
     if (cur->type != AIM_CONN_TYPE_CHAT)
       continue;
+    if (!cur->priv) {
+      printf("faim: chat: chat connection with no name! (fd = %d)\n", cur->fd);
+      continue;
+    }
     if (strcmp((char *)cur->priv, name) == 0)
       break;
   }
@@ -38,8 +42,10 @@ faim_export int aim_chat_attachname(struct aim_conn_t *conn, char *roomname)
   if (!conn || !roomname)
     return -1;
 
-  conn->priv = malloc(strlen(roomname)+1);
-  strcpy(conn->priv, roomname);
+  if (conn->priv)
+    free(conn->priv);
+
+  conn->priv = strdup(roomname);
 
   return 0;
 }
@@ -250,7 +256,7 @@ faim_internal int aim_chat_parse_infoupdate(struct aim_session_t *sess,
 
   if (detaillevel != 0x02) {
     if (detaillevel == 0x01)
-      printf("faim: chat_roomupdateinfo: detail level 2 not supported\n");
+      printf("faim: chat_roomupdateinfo: detail level 1 not supported\n");
     else
       printf("faim: chat_roomupdateinfo: unknown detail level %d\n", detaillevel);
     return 1;
@@ -422,10 +428,11 @@ faim_internal int aim_chat_parse_incoming(struct aim_session_t *sess,
   struct aim_userinfo_s userinfo;
   rxcallback_t userfunc=NULL;	
   int ret = 1, i = 0, z = 0;
-  u_char cookie[8];
+  unsigned char cookie[8];
   int channel;
   struct aim_tlvlist_t *outerlist;
   char *msg = NULL;
+  struct aim_msgcookie_t *ck;
 
   memset(&userinfo, 0x00, sizeof(struct aim_userinfo_s));
 
@@ -437,7 +444,11 @@ faim_internal int aim_chat_parse_incoming(struct aim_session_t *sess,
   for (z=0; z<8; z++,i++)
     cookie[z] = command->data[i];
 
-  aim_cachecookie(sess, aim_mkcookie(cookie, AIM_COOKIETYPE_ICBM, NULL));
+  if ((ck = aim_uncachecookie(sess, cookie, AIM_COOKIETYPE_CHAT))) {
+    if (ck->data)
+      free(ck->data);
+    free(ck);
+  }
 
   /*
    * Channel ID
@@ -547,7 +558,7 @@ faim_export int aim_chat_leaveroom(struct aim_session_t *sess, char *name)
   struct aim_conn_t *conn;
 
   if ((conn = aim_chat_getconn(sess, name)))
-    aim_conn_kill(sess, &conn);
+    aim_conn_close(conn);
 
   if (!conn)
     return -1;
@@ -569,7 +580,10 @@ faim_export unsigned long aim_chat_invite(struct aim_session_t *sess,
   int i,curbyte=0;
 
   if (!sess || !conn || !sn || !msg || !roomname)
-    return 0;
+    return -1;
+
+  if (conn->type != AIM_CONN_TYPE_BOS)
+    return -1;
 
   if (!(newpacket = aim_tx_new(AIM_FRAMETYPE_OSCAR, 0x0002, conn, 1152+strlen(sn)+strlen(roomname)+strlen(msg))))
     return -1;
@@ -583,6 +597,8 @@ faim_export unsigned long aim_chat_invite(struct aim_session_t *sess,
    */
   for (i=0;i<8;i++)
     curbyte += aimutil_put8(newpacket->data+curbyte, (u_char)rand());
+
+  /* XXX this should get uncached by the unwritten 'invite accept' handler */
   aim_cachecookie(sess, aim_mkcookie(newpacket->data+curbyte-8, AIM_COOKIETYPE_CHAT, NULL));
 
   /*
